--- a/product-manager.html
+++ b/product-manager.html
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/renew/jobs/4359797002'>Job Application for Technical Product Manager at Renew Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/renew/jobs/4359797002'>Job Application for Technical Product Manager at Renew Health</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -179,7 +179,7 @@ Services.</p>
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Product Manager at Lumere in Chicago, IL.</p>
 <hr/>
@@ -274,7 +274,7 @@ this position has been closed due to changes in the recruiting system. But you?.
 <p>4 days ago ... Working closely with your Product Analyst, BA, UX designer and developers to 
 design solutions to our customer problems. Create high level user stories that?...</p>
 <hr/>
-<h5><a href='https://eurostar.workable.com/jobs/1085509'>Product Owner - Apply online - Eurostar - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/jobs/1085509'>Product Owner - Apply online - Eurostar - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Working closely with your Product Analyst, BA, UX designer and developers to 
 design solutions to our customer problems. Create user stories that communicate
@@ -306,7 +306,7 @@ design solutions to our customer problems. Create user stories that communicate
 advocate for the team's customers and stakeholders within the team and keeps 
 the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=obwhafwS&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nm3aWLwL'>Ingram Micro Careers - Senior Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=obwhafwS&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nm3aWLwL'>Ingram Micro Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -353,7 +353,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -406,7 +406,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oMHBafwY'>Automation Anywhere Careers - Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oMHBafwY'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -427,7 +427,7 @@ support, sales, marketing, and system usage data provided by development?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=oxwjafwg&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=nLmXVLwf'>Farfetch Careers - Product Manager - Platform Partners</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=oxwjafwg&__jvst=Employee&__jvsd=sSFZ9hwr&__jvsc=Twitter&bid=nLmXVLwf'>Farfetch Careers - Product Manager - Platform Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
